--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>المصاريف | لوحة التحكم</title>
+  <title>MASROF | لوحة التحكم المالية</title>
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="المصاريف">
+  <meta name="apple-mobile-web-app-title" content="MASROF">
   <meta name="theme-color" content="#3b82f6">
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22grad%22 x1=%220%25%22 y1=%220%25%22 x2=%22100%25%22 y2=%22100%25%22><stop offset=%220%25%22 style=%22stop-color:%233b82f6;stop-opacity:1%22 /><stop offset=%22100%25%22 style=%22stop-color:%232563eb;stop-opacity:1%22 /></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2222%22 fill=%22url(%23grad)%22/><g fill=%22white%22><rect x=%2230%22 y=%2250%22 width=%2215%22 height=%2225%22 rx=%224%22 /><rect x=%2255%22 y=%2225%22 width=%2215%22 height=%2250%22 rx=%224%22 /></g></svg>">
