--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:#3b82f6;stop-opacity:1' /><stop offset='100%' style='stop-color:#2563eb;stop-opacity:1' /></linearGradient></defs><rect width='100' height='100' rx='22' fill='url(#grad)'/><g fill='white'><rect x='30' y='50' width='15' height='25' rx='4' /><rect x='55' y='25' width='15' height='50' rx='4' /></g></svg>">
 
   <link rel="manifest" href="/manifest.json">
+  
+  <!-- Tailwind CSS via CDN - keeping for design stability -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/src/index.css">
   
   <style>
