إضافة ميزات جديدة شاملة
 الوضع المظلم:
- مكون DarkModeToggle مع تأثيرات انتقالية
- دعم كامل للوضع المظلم مع CSS متغيرات
- حفظ تفضيلات المستخدم في الإعدادات

 الإشعارات الذكية:
- مكون NotificationManager مع إدارة الصلاحيات
- دعم الإشعارات المحلية والويب
- إعدادات تفعيل/إلغاء الإشعارات

 PWA محسن:
- manifest.json محسن مع معلومات شاملة
- Service Worker للعمل دون اتصال
- دعم الإشعارات الدفعية
- اختصارات التطبيق

 اختيار اللغة العربية:
- عرض اللغة الحالية (العربية)
- أيقونة اللغة في شريط الإعدادات

 إدارة الديون المحسنة:
- نموذج DebtForm شامل لإضافة الديون
- حقول: مصدر الدين السبب التاريخ الحالة
- دعم الديون لي والديون علي
- واجهة مستخدم محسنة مع التحقق من البيانات

 تحسينات واجهة:
- شريط إعدادات جديد تحت الهيدر
- تخطيط متجاوب للعناصر
- ألوان وتأثيرات محسنة
- دعم الوضع المظلم في جميع المكونات

 تحسينات تقنية:
- إضافة settings إلى AppState
- إدارة حالة الوضع المظلم والإشعارات
- تسجيل Service Worker تلقائيا
- تحسين أداء التطبيق

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       --accent-orange: #f59e0b;
     }
     
+    .dark {
+      --bg-light: #1f2937;
+      --card-light: #374151;
+      --border-light: #4b5563;
+      --text-dark: #f3f4f6;
+      --text-headings: #ffffff;
+    }
+    
     * { font-family: 'Cairo', sans-serif; }
     body { background-color: var(--bg-light); color: var(--text-dark); }
     .glass-card { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border: 1px solid var(--border-light); border-radius: 1rem; transition: all 0.3s ease; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.06); }
