--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><defs><linearGradient id=%22grad%22 x1=%220%25%22 y1=%220%25%22 x2=%22100%25%22 y2=%22100%25%22><stop offset=%220%25%22 style=%22stop-color:%233b82f6;stop-opacity:1%22 /><stop offset=%22100%25%22 style=%22stop-color:%232563eb;stop-opacity:1%22 /></linearGradient></defs><rect width=%22100%22 height=%22100%22 rx=%2222%22 fill=%22url(%23grad)%22/><g fill=%22white%22><rect x=%2230%22 y=%2250%22 width=%2215%22 height=%2225%22 rx=%224%22 /><rect x=%2255%22 y=%2225%22 width=%2215%22 height=%2250%22 rx=%224%22 /></g></svg>">
   <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:#3b82f6;stop-opacity:1' /><stop offset='100%' style='stop-color:#2563eb;stop-opacity:1' /></linearGradient></defs><rect width='100' height='100' rx='22' fill='url(#grad)'/><g fill='white'><rect x='30' y='50' width='15' height='25' rx='4' /><rect x='55' y='25' width='15' height='50' rx='4' /></g></svg>">
 
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="./manifest.json">
   
   <!-- Tailwind CSS via CDN - keeping for design stability -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="/src/index.css">
+  <link rel="stylesheet" href="./src/index.css">
   
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
