--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MASROF | لوحة التحكم المالية</title>
 
+  <!-- Pre-load Gemini AI library to prevent race conditions -->
+  <script src="https://aistudiocdn.com/@google/genai@^1.21.0"></script>
+  
+  <!-- Cache busting for deployment fixes -->
+  <script>
+    // Force cache refresh for critical fixes
+    if (performance.navigation.type === 1) {
+      // Page was refreshed, clear any stale cache
+      if ('caches' in window) {
+        caches.keys().then(names => {
+          names.forEach(name => {
+            if (name.includes('fd-') || name.includes('financial')) {
+              caches.delete(name);
+            }
+          });
+        });
+      }
+    }
+  </script>
+
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
