--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MASROF | لوحة التحكم المالية</title>
 
-  <!-- Pre-load Gemini AI library to prevent race conditions -->
-  <script src="https://aistudiocdn.com/@google/genai@^1.21.0"></script>
+  <script type="importmap">
+  {
+    "imports": {
+      "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0"
+    }
+  }
+  </script>
   
   <!-- Cache busting for deployment fixes -->
   <script>
